feat: M1c-1 repo-internal hardening (criteria 1 and 7)
Closes three SECURITY-POLICY.md gaps that were spec'd but unimplemented
(256 MB report size cap, repo-root path-escape rejection, terminal
control-character escaping), rejects duplicate --module/--source-roots/
--test-roots ids instead of silently overwriting, and fills every
criterion-7 negative-test gap the M1b-era suite had: unparseable test
source, findings-cap truncation semantics, rename-with-modification,
end-to-end MISSING_MERGE_BASE, an XXE proof that the target file is never
read, Unicode/space paths on real disk, CRLF (XML and Java), and a
Windows-backslash --report argument normalizing to forward slashes.

Adds a second, tool-output golden layer (fixtures/verdicts/) compared
byte-for-byte against a fresh CLI run, alongside the M0 hand-written
schema/examples/ goldens, and upgrades the diff-mode two-run determinism
check from string to byte comparison (M1c criterion 1).

153/153 tests green (1 documented skip: symlink creation needs elevated
privilege on this Windows machine). SonarQube self-scan: quality gate OK,
0 open issues, 87.1% new-code coverage, 0% duplication.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>